Completely refactor and fix the asset_store_server api, still WIP
