# proof_of_concept/asset_store_server/controllers/assets_controller.py
@@ -1,9 +1,11 @@
+import json
+
 import connexion
 from flask import abort
 from injector import inject
 
+from proof_of_concept.asset import Asset
 from proof_of_concept.asset_store import AssetStore
-from proof_of_concept.asset_store_server.models.asset import Asset
 
 
 @inject
@@ -18,28 +20,17 @@ def get_asset(store: AssetStore, asset_id: str, requester: str):
     try:
         asset = store.retrieve(asset_id, requester)
     except KeyError:
-        abort(404)
+        abort(404, 'Asset not found')
     else:
-        # TODO: Building the (Flask) asset based on the retrieved asset
-        #  object is a nightmare, maybe merge all the Flask models with our
-        #  own classes?
-        Asset()
-        return asset
+        return json.dumps(asset.to_dict())
 
 
-def store_asset(body=None):
-    """Store an asset
-
-     # noqa: E501
-
-    :param body:
-    :type body: dict | bytes
-
-    :rtype: None
-    """
+@inject
+def store_asset(store: AssetStore):
+    """Store an asset."""
     if connexion.request.is_json:
-        body = Asset.from_dict(connexion.request.get_json())  # noqa: E501
-
-    # TODO: Same conversion nightmare, and also not sure whether we add a
-    #  DataAsset or ComputeAsset
-    return 'do some magic!'
+        asset = Asset.from_dict(connexion.request.get_json())  # noqa: E501
+        store.store(asset)
+        return None, 201
+    else:
+        abort(400, 'Please pass json')
